Calc - Tests added

--- a/lib/dmage_web/live/main_live.html.leex
+++ b/lib/dmage_web/live/main_live.html.leex
@@ -19,11 +19,17 @@
         </div>
       </p>
     </div>
-      </p>
     <div class="clicksize">
       <p class="label v-space">Damage (Crit):
         <div class="">
           <input class="" type="number" name="damage_crit"  step="1" value="" placeholder="DC"/>
+        </div>
+      </p>
+    </div>
+    <div class="clicksize">
+      <p class="label v-space">Save (target):
+        <div class="">
+          <input class="" type="number" name="save"  step="1" value="" placeholder="Save"/>
         </div>
       </p>
     </div>
