--- a/lib/dmage_web/live/main_live.html.leex
+++ b/lib/dmage_web/live/main_live.html.leex
@@ -17,18 +17,11 @@
         </p>
       </div>
       <div class="clicksize">
-        <p class="label v-space">Normal:
+        <p class="label v-space">Damage:</p>
           <div class="">
             <input class="" type="number" name="damage_normal"  step="1" value="" placeholder="D (Normal)"/>
-          </div>
-        </p>
-      </div>
-      <div class="clicksize">
-        <p class="label v-space">Critical:
-          <div class="">
             <input class="" type="number" name="damage_crit"  step="1" value="" placeholder="D (Critical)"/>
           </div>
-        </p>
       </div>
     </div>
 
@@ -45,22 +38,6 @@
         <p class="label v-space">In cover:
           <div class="">
             <input class="" type="checkbox" name="cover"/>
-          </div>
-        </p>
-      </div>
-    </div>
-
-    <div class="box">
-      <p>Method</p>
-      <div class="clicksize">
-        <p class="label v-space">Calculate
-          <div class="">
-            <input class="" type="radio" name="method" value="calc" checked/>
-          </div>
-        </p>
-        <p class="label v-space">Run 100
-          <div class="">
-            <input class="" type="radio" name="method" value="run"/>
           </div>
         </p>
       </div>
